Version - 2.8 - 
-Added additional checks so that helpful error messages are given if species names are accidentally left in as a column in timeList for bin_cal3TimePaleoPhy and bin_timePaleoPhy, thanks Victoria Arbour for this bug report
-Added informative error message if sliceTime is later in time than the lattest tip (thanks Graeme Lloyd for reporting this)
-Merged two taxa due to an accidental taxon name mis-spelling in the kanto dataset
-Fixed a missing line in the example code for perCapitaRates
-Added argument 'yAxisLims' to multiDiv functions so that the y axis (richness) can be constrained by the user, thanks to Robin Beck for suggestion (01-23-17)
-

Version - 2.7 - 04-12-16
-Modified probAnc documetentation so that indirect descendant examples are shown
-Modified probAnc so that calculated NaN values are replaced with zero and a message is printed
-Added name and length checks to horizonSampRate, and code to resort names so they match if not input correctly
-Modified plotTraitgram to allow input of simulated node values, edited and clarified documentation and examples
-Small changes to order of arguments in bin_cal3TimePaleoPhy
-Added argument maxAttempts to simFossilRecord so that simFossilRecord will end after some number of failed attempts. Default is Inf. Thanks W. Andrew Barr for this suggestion in issue #1!
-Added example for bin_timePaleoPhy with minimum node ages AND random resolution of polytomies
-Fixed bug pointed out by Armin Elsler of Bristol, that randomly resolving polytomies and setting minimum node ages with bin_timePaleoPhy led to an error, due to bin_timePaleoPhy resolving polytomies before sending to timePaleoPhy (which leads to errors)
-Modified cal3TimePaleoPhy so that if randres=TRUE and node age minimums were used, that node age locks were applied to the correct nodes post random resolution of polytomies

Version - 2.6 - 12-01-15